fix: static-make.ts and filterType and change handling of logo light and dark mode (#31)
* fix: correct searchType to filterType in FilterInput.svelte

* fix: update index_seo to indexSeo in static-make.config.json and adjust selector format in capturePage function

* change: logo handling for light and dark modes in Header, Loading components and main-banner

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -181,6 +181,18 @@ html.dark-mode img[alt$='special-main-color'] {
     hue-rotate(179deg) brightness(88%) contrast(103%);
 }
 
+img[alt*='dark-mode'] {
+  display: none;
+}
+html.dark-mode img[alt*='dark-mode'] {
+  display: block;
+}
+html.dark-mode img:not([alt*='dark-mode']) {
+  &[alt^='main-banner'] {
+    display: none;
+  }
+}
+
 .break-line {
   word-break: break-all;
 }
